welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:10: error: '=>' expected but string literal found.
    case <= "F" => avancer(message)
            ^